コンテナ名変更

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "html-railway",
+	"name": "react-railway",
 	"dockerFile": "Dockerfile",
 	"workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=delegated",
 	"workspaceFolder": "/workspace",
@@ -35,8 +35,8 @@
 	],
 	"mounts": [
 		"source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind,consistency=delegated", // Remote Container内でDockerを使うには、ホストOSのDocker daemonを使うように設定する。
-		"source=html-railway_vscode_extension,target=/root/.vscode-server/extensions,type=volume", // extensionをビルドのたびにインストールしないため。個人のextensionを保存するため。
-		"source=html-railway_bashhistory,target=/commandhistory,type=volume" // bashヒストリーが残る設定
+		"source=react-railway_vscode_extension,target=/root/.vscode-server/extensions,type=volume", // extensionをビルドのたびにインストールしないため。個人のextensionを保存するため。
+		"source=react-railway_bashhistory,target=/commandhistory,type=volume" // bashヒストリーが残る設定
 	],
 	"postCreateCommand": "bash .devcontainer/postCreateCommand.sh"
 }
